2009-10-05  Ramon Novoa  <rnovoa@artica.es>

	* ftp/pandora_ftp_client.h: Fixed the path of curl.h to match
	  that in the Dev-cpp libcurl devpack.

	* modules/pandora_module_tcpcheck.cc: Properly close the connection
	  socket.

	* modules/pandora_module_regexp.cc: Removed debugging code.

	* modules/pandora_module_perfcounter.cc: Close the query handle even if
	  no data was returned to avoid memory leaks.

	* windows/pandora_windows_info.h,
	  windows/pandora_windows_info.cc,
	  modules/pandora_module_proc.cc: Fixed a process handle leak.

	* configure.in: Improved library detection.

2009-09-24  Sancho Lerena <slerena@artica.es>

	* modules/pandora_module_tcpcheck.cc: WSAStartup memory management 
	was leaking memory, so we will create and destroy in each loop the WSA
	structure. Tested and leak-proof :-))

	* modules/pandora_module_inventory.cc: Fixed typo with string label of 
	services inventory module.

	* bin/PandoraAgent.exe: New binary (woah, compiled from linux!).

	* pandora_windows_service.cc: Fixed problem in os XML Tag, was os_name 
	not os. Fixed problem with windows version, now is passwd full string to xml.  
	Tentacle call is passwd between quotes, because tentacle could be
	in paths with blank spaces (by default \program files\pandora_agent).

	* pandora.cc: Build updated. 

2009-09-23  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.h, modules/pandora_module_inventory.cc: Changed
	  the format of the inventory XML.

	* main.cc: Execute the agent and exit when compiled with debugging
	  enabled.

2009-09-22  Ramon Novoa  <rnovoa@artica.es>

	* debug_new.h, fast_mutex.h,
	  debug_new.cpp, static_assert.h: Added to repository. Wu Yongwei's
	  memory leak detection tool (part of Nvwa). Only compiled when
	  debugging is enabled.

	* bin/util/tentacle_client.exe: Added to repository. Tentacle client
	  needed to build the installer.

	* installer/pandora_2.0.mpi: moved to installer/pandora.mpi. Updated.